# chess-engine-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Contributing.md  README.md  a.out  board.cpp  board.hpp  debug.cpp  debug.hpp  main.cpp  pieces.cpp  pieces.hpp  util.hpp
include/: bitboardhelper.hpp  board.hpp  debug.hpp  fenparser.hpp  gamestate.hpp  movelogger.hpp  pieces.hpp  player.hpp  sfml_app.hpp  sfml_event_handler.hpp  sfml_renderer.hpp  util.hpp
src/: bitboardhelper.cpp  board.cpp  debug.cpp  fenparser.cpp  gamestate.cpp  main.cpp  movelogger.cpp  pieces.cpp  player.cpp  sfml_app_events.cpp  sfml_app_render.cpp  sfml_event_handler.cpp  sfml_renderer.cpp
